<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="Autofill" >

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_18">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_old_password"
            android:layout_marginTop="@dimen/margin_20"
            android:textColor="@color/dark"
            android:textSize="@dimen/textsize_12"/>

        <EditText
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:padding="@dimen/padding_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_password_old"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColorHint="@color/light"
            android:textColor="@color/dark"
            android:textSize="@dimen/textsize_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_new_password"
            android:layout_marginTop="@dimen/margin_22"
            android:textColor="@color/dark"
            android:textSize="@dimen/textsize_12"/>

        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:padding="@dimen/padding_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_password_new"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColorHint="@color/light"
            android:textColor="@color/dark"
            android:textSize="@dimen/textsize_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_confirm_new_password"
            android:layout_marginTop="@dimen/margin_12"
            android:textColor="@color/dark"
            android:textSize="@dimen/textsize_12"/>

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:padding="@dimen/padding_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_password_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/light"
            android:textColor="@color/dark"
            android:textSize="@dimen/textsize_14" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:textAllCaps="false"
            android:background="@drawable/bg_button_enable_corner_16"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_14" />

    </LinearLayout>
</RelativeLayout>