<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:viewBindingIgnore="true"
    android:orientation="vertical"
    android:padding="@dimen/margin_10"
    tools:ignore="Autofill,LabelFor" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_address"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/label_full_name"
        android:textSize="@dimen/textsize_14" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginTop="@dimen/padding_5"
        android:padding="@dimen/padding_12"
        android:background="@drawable/bg_white_corner_16_border_gray"
        android:imeOptions="actionNext"
        android:textSize="@dimen/textsize_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/label_phone"
        android:textSize="@dimen/textsize_14" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="phone"
        android:background="@drawable/bg_white_corner_16_border_gray"
        android:layout_marginTop="@dimen/padding_5"
        android:padding="@dimen/padding_12"
        android:imeOptions="actionNext"
        android:textSize="@dimen/textsize_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/label_address"
        android:textSize="@dimen/textsize_14" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="text"
        android:background="@drawable/bg_white_corner_16_border_gray"
        android:padding="@dimen/padding_12"
        android:layout_marginTop="@dimen/padding_5"
        android:imeOptions="actionDone"
        android:textSize="@dimen/textsize_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_weight="1"
            android:background="@drawable/bg_button_disable_corner_16"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:paddingStart="@dimen/margin_16"
            android:paddingEnd="@dimen/margin_16"
            android:text="@string/action_cancel"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/textsize_14" />

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_enable_corner_16"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="@string/action_add"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_14" />
    </LinearLayout>
</LinearLayout>
