<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/white"
    tools:ignore="UseCompoundDrawables, ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/img_status"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/margin_80"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:text="@string/full_name"
                    android:textColor="@color/dim_grey"
                    android:textSize="@dimen/textsize_14"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/textsize_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/padding_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/margin_80"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:text="@string/phone_number"
                    android:textColor="@color/dim_grey"
                    android:textSize="@dimen/textsize_14"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/textsize_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/padding_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/margin_80"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:text="@string/address"
                    android:textColor="@color/dim_grey"
                    android:textSize="@dimen/textsize_14"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/textsize_14" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_item_unselect" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:background="@color/gainsboro" />
</LinearLayout>